<resources>
    <string name="app_name">Caarvin</string>
    <string name="lbl_post">Post</string>
    <string name="lbl_name">Kishore Kumar G</string>
    <string name="lbl_loc">Lalgudi,Tiruchirapalli.</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_search">Search</string>

    <string name="lbl_horse">horse and other vehicle</string>

    <string name="lbl_cycle">cycle</string>

    <string name="lbl_earth">earth movers</string>

    <string name="lbl_trac">tractors</string>

    <string name="lbl_car">cars</string>

    <string name="lbl_bike">bike</string>

    <string name="lbl_drive">driver</string>

    <string name="lbl_fishing">fishing boat</string>

    <string name="lbl_comm">commercial vehicle dealer and agent</string>

    <string name="lbl_heavy">heavy goods vehicle</string>

    <string name="lbl_auto">auto</string>

    <string name="lbl_driver">driver</string>

    <string name="lbl_journey">journey boat</string>

    <string name="lbl_accessories">auto accessories shop</string>

    <string name="lbl_van">van &amp; bus</string>

    <string name="api_key">AIzaSyA4epCW__HCcWgX872Qk77gWS2EQ_gKeko</string>

    <string name="hyperlink_google_play"><a href="https://policies.google.com/privacy">Google Play Services</a></string>


    <string name="loading">Loading...</string>

    //Network Test
    <string name="network_error">Please Check your internet connection</string>

    <string name="failed">Failed</string>
</resources>